@@ -1,4 +1,5 @@
 [CW12]
+* SyncProxyAndroid SDK: PerformAudioPassThru: no OnAudioPassThru notifications
 * SyncProxyAndroid SDK: Connection closes after UnregisterAppInterface
 * SyncProxyTester | SyncProxyAndroid SDK: Add possibility to restart RPC service for the specific Test Cases
 * SyncProxyTester: Check open session (by Session Id) when executing automatic tests DISABLED
